# scriptree

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md  make_portable.py  make_shortcut.py  pyproject.toml  run_scriptree.bat  run_scriptree.py  run_scriptree.sh
ScripTree/: pyproject.toml
ScripTree/docs/: ScripTree_Competitive_Analysis.docx  competitive_analysis.py
ScripTree/examples/: OpenToolbox-Generator.scriptree  SolidWorks_toolkit.scriptreetree  SwApiTrainingGen.scriptree  (+3 more)
ScripTreeApps/: DxfExport.scriptreetree  audit_vendored.py
help/: README.md  environment.md  features.md  file_formats.md  portable_python.md  quickstart.md  security.md  settings.md  tool_editor.md  tool_runner.md
lib/: README.md  install_python.ps1  install_python.sh  requirements.txt  update_lib.py
parsers/: argparse.py  powershell.py
scriptree/: __init__.py
tests/: conftest.py  test_capability_permissions.py  test_configs.py  test_env_overrides.py  test_help_dialog.py  test_io.py  test_main_window_cache.py  test_model.py  test_nested_trees.py  test_no_persist.py  test_param_widget_drop.py  test_parser_heuristic.py  test_parser_winhelp.py  test_parser_winhelp_find.py  test_path_env.py  test_permissions.py  test_personal_configs.py  test_plugin_api.py  test_powershell_parser.py  test_recovery_dialog.py  test_relative_paths.py  test_runner.py  test_sections.py  test_tool_editor_preview.py  test_tool_runner_collapsibles.py  test_tool_runner_cursor.py  test_tool_runner_edit.py  test_tool_runner_edit_buttons.py  test_tool_runner_recovery.py  test_tree_configs.py  test_visibility.py
(+165 files in other folders)
