[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptree"
version = "0.1.13"
description = "Universal GUI generator for CLI tools"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4",
]

[project.scripts]
scriptree = "scriptree.main:main"

[tool.setuptools.packages.find]
include = ["scriptree*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
